# spf-client

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  sunscreen-llvm.nix
.cargo/: config.toml
.github/workflows/: ci.yml
browser-demo/: README.md  index.html  main.ts  package.json  tsconfig.json  vite.config.ts
browser-demo/infrastructure/: .gitignore  deploy.sh  main.tf
browser-demo/styles/: base.css  code-display.css  components.css  responsive.css  status.css
fhe-programs/src/: Makefile  add.c  voting.c
node-demo/: README.md  package.json  voting.ts
scripts/: .gitignore  clean  test-voting-cli  update-npm-hash
src/: client.rs  eip712_types.rs  lib.rs  message.rs  wasm.rs
src/cli/: acl.rs  auth.rs  chain.rs  contract.rs  decrypt.rs  http.rs  mod.rs  run.rs  upload.rs
src/core/: crypto.rs  encoding.rs  error.rs  mod.rs  types.rs  utils.rs
tests/: README.md  integration_test.rs  test_chain_resolution.rs  test_voting_e2e.rs
tests/common/: mod.rs
typescript/: .gitignore  .npmignore  LICENSE  README.md  default.nix  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
typescript/examples/: add.ts  voting.ts
typescript/src/: acl-check.ts  acl.ts  encryption.ts  index.ts  parsers.ts  public-key.ts  reencryption.ts  spf-client.ts  validation.ts  wasm-loader.ts
typescript/test/: abort-signal.test.ts  acl-check.test.ts  acl.test.ts  authentication.test.ts  decryption.test.ts  encryption.test.ts  otp-reencryption.test.ts  parameters.test.ts  parameters.test.ts.bak  polling-options.test.ts  programs.test.ts  (+5 more)
(+21 files in other folders)
