[package]
name = "spf_client"
version = "0.2.2"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
integration-tests = []

[[bin]]
name = "spf-client"
path = "src/bin/cli.rs"

[dependencies]
parasol_runtime = { git = "https://github.com/Sunscreen-tech/spf.git" }
sunscreen_tfhe = { git = "https://github.com/Sunscreen-tech/spf.git" }
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"
hex = "0.4"
tiny-keccak = { version = "2.0", features = ["keccak"] }
k256 = { version = "0.13", features = ["ecdsa"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
alloy = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
alloy = "1"
enum_stringify = "0.6"
parasol_cpu = { git = "https://github.com/Sunscreen-tech/spf.git" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
